--- a/playbooks/roles/windows-software/tasks/choco_packages.yml
+++ b/playbooks/roles/windows-software/tasks/choco_packages.yml
@@ -8,6 +8,9 @@
     - name: "Reboot? {{choco.changed and choco.rc == 3010}}"
       ansible.windows.win_reboot:
       when: choco.changed and choco.rc == 3010
-
       # ansible.builtin.debug:
       # msg: "{{ item | type_debug }}"
+  rescue:
+    - fail:
+        msg: "{{choco}}"
+      when: choco.rc !=1638
